contact me on butt now

--- a/index.html
+++ b/index.html
@@ -29,49 +29,49 @@
 
 <div id="mixx24">
   <div id="mixxinfo"><h1><img class="mixxlogo" src="assets/img/mixxlogo.png"/></h1><h2>From ground to the heavens;<br /> your music, anywhere.</h2>
-    <h3><a href="mixx/index.html">Open Project</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> ></h3></div>
+    <h3><a href="mixx/index.html">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> > --></h3></div>
   <img id="mixximg" src="assets/img/mixx2.1.png" />
   </div>
 
 
 <div id="companionship">
   <div id="companionshipinfo"><h1>Companionship</h1><h2>An interactive story to help develop closure after a breakup.</h2>
-    <h3><a href="companionship/index.html">Open Project</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> ></h3></div>
+    <h3><a href="companionship/index.html">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> > --></h3></div>
   <img id="companionshipimg" src="assets/img/companionship2.1.png" /><img id="companionshipimgmobile" src="assets/img/companionship2.1mobile.png" />
   </div>
 
 <div id="wetea">
   <div id="weteainfo"><h1>weTea Game</h1><h2>What if tea bags could help break the ice of a conversation?
 </h2>
-    <h3><a href="yogitea/index.html">Open Project</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> ></h3></div>
+    <h3><a href="yogitea/index.html">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
   <img id="weteaimg" src="assets/img/yogi2.1.png" /><img id="weteaimgmobile" src="assets/img/yogi2.1mobile.png" />
   </div>
 
 <div id="monsterpho">
   <div id="monsterphoinfo"><h1>Monster Pho</h1><h2>Performing deep, honest research to discover how a pho restaurant can be innovative.</h2>
-    <h3><a href="monsterpho/index.html">Open Project</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> ></h3></div>
+    <h3><a href="monsterpho/index.html">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
   <img id="monsterphoimg" src="assets/img/monsterpho2.1.svg" /><img id="monsterphoimgmobile" src="assets/img/monsterpho2.1.png" />
   </div>
 
 
   <div id="facebookarchive">
   <div id="facebookarchiveinfo"><h1>Facebook Archive</h1><h2>Redesigning Facebook with the micro interactions of a calendar.</h2>
-    <h3><a class="video" >Watch Video</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> ></h3></div>
+    <h3><a class="video" >Watch Video</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
   <img id="facebookarchiveimg" src="assets/img/facebookarchive2.1.png" /><img id="facebookarchiveimgmobile" src="assets/img/companionship2.1mobile.png" />
   </div>
-  <div id="facebookarchivevideo"><h1 class="turnoff">X</h1><style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 90%; margin: 0 auto;} .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 90%; }</style><div class='embed-container'><iframe  src="https://player.vimeo.com/video/158299517?title=0&byline=0&portrait=0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div></div>
+  <div id="facebookarchivevideo"><h1 class="turnoff">&times;</h1><style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 90%; margin: 0 auto;} .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 90%; }</style><div class='embed-container'><iframe  src="https://player.vimeo.com/video/158299517?title=0&byline=0&portrait=0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div></div>
 
 
   <div id="unown">
   <div id="unowninfo"><h1>Unown Sans</h1><h2>HTML + CSS = Unown Sans Font</h2>
-    <h3><a href="http://zxue.me/interactive2/project3/index.html">Open Project</a> >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> ></h3></div>
+    <h3><a href="http://zxue.me/interactive2/project3/index.html">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
   <img id="unownimg" src="assets/img/unown2.1.png" /><img id="unownimgmobile" src="assets/img/unown2.1mobile.png" />
   </div>
 
 <div id="mybutt">
-  <div class="mycopyright"><a href="http://resume.zxue.me"><span class="myrightfont"><span class="mycopyrightc">&#9426; &nbsp</span> 2016 ZHIYU XUE</span></a></div>
+  <div class="mycopyright"><a href="http://resume.zxue.me"><span class="myrightfont"><span class="mycopyrightc">&#9426;  &nbsp</span> 2016 ZHIYU XUE</span></a></div><div class="mycontact"><a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><span class="myrightfont">CONTACT ME</span></a></div>
 
-  <a href="https://www.facebook.com/Mr.douBlelBean"><div class="mysharebuttom1">f</div></a> <a href="https://twitter.com/reajixue"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue"><div class="mysharebuttom3">in</div></a>
+  <a href="https://www.facebook.com/Mr.douBlelBean"><div class="mysharebuttom1">f</div></a> <a href="https://twitter.com/reajixue"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue"><div class="mysharebuttom3">in</div></a>  <!-- <a href="http://www.linkedin.com/in/zhiyuxue"><div class="mysharebuttom4">&#9993;</div></a> -->
 </div>
 
 <script>
