--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
   </head>
   <body>
 
-
 <div id="nav">
-      <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
-      <div class="manu about"><a href="http://about.zxue.me">ABOUT</a></div>
-      <div class="manu works"><a href="http://work.zxue.me">WORK</a></div>
+     <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
+      <a href="http://about.zxue.me"><div class="menu about">ABOUT<div class="underline"></div></div></a>
+      <a href="http://work.zxue.me"><div class="menu work">WORK <div class="underline"></div></div></a>
   </div>
 
 
-
+<!-- <div id="bubble">
+  <div id="bubbleinfo"><h1><img class="bubblelogo" src="assets/img/bubblelogo.png"/><br>Bubble</h1><h2>Let's put an end to bullying.</h2><h4><span>Intel Designovation: 24 hour design challenge.</span></h4>
+    <h3><a href="bubble/index.html">Open Project</a> ></h3></div>
+  <img id="bubbleimg" src="assets/img/bubble2.1.png" /><img id="bubbleimgmobile" src="assets/img/bubble2.1mobile.png" />
+  </div> -->
 
 <div id="mixx24">
   <div id="mixxinfo"><h1><img class="mixxlogo" src="assets/img/mixxlogo.png"/></h1><h2>From ground to the heavens;<br /> your music, anywhere.</h2>
