--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
   </head>
   <body>
 
+
 <div id="nav">
      <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
       <a href="http://about.zxue.me"><div class="menu about">ABOUT<div class="underline"></div></div></a>
       <a href="http://work.zxue.me"><div class="menu work">WORK <div class="underline"></div></div></a>
   </div>
+<div id="navbackground"></div>
 
 
 <!-- <div id="bubble">
@@ -89,6 +91,7 @@
 </script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
 <script type ="text/javascript" src="js/javascript.js"></script>
 
 </body>
