--- a/bubble/index.html
+++ b/bubble/index.html
@@ -17,12 +17,12 @@
   </head>
   <body>
 
-<div class="background">
 <div id="nav">
-      <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
-      <div class="menu about"><a href="http://about.zxue.me">ABOUT</a></div>
-      <div class="menu works"><a href="http://work.zxue.me">WORK</a></div>
-  </div></div>
+     <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
+      <a href="http://about.zxue.me"><div class="menu about">ABOUT<div class="underline"></div></div></a>
+      <a href="http://work.zxue.me"><div class="menu work">WORK <div class="underline"></div></div></a>
+  </div>
+<div id="navbackground"></div>
 
 <img class="headpic" src="assets/img/headpic.png" alt="Bubble | Intel Designovation 24 hours challenge."></img>
 
@@ -32,29 +32,63 @@
 
 <!-- <h4 class="note1">Bubble | <span>Intel</span> Designovation 24 hours challenge.</h4> -->
 
-<p class="description">Have you ever worried about your children being bullied? Have you ever worried you cannot understand what happened to your children? Bubble protects students from bullying and help parents and teachers understand what happen to children. By building a better communication between guardians and kids,  kids can alert and report to guardians during or after an emergency. At the same time, we respect kids' privacy.</p>
-
-<p class="description"><a href="http://www.marianaemartinez.com" target="_blank">Mariana</a> and I did secondary research, analysed bullying issues, and designed the solution in 24 hours. When we looked at the design problem, we decided to put the power of stopping bullying on kids. At the same time, parents and teachers will be notified and help protect kids. In this project, we focused on analysing the problem, come up with solutions, and some key interface design.
+<p class="description mapdescription">Have you ever worried about your children being bullied and you cannot understand what happened to your children? <span class="hilight"> Bubble protects students from bullying and help parents and teachers understand what happen to children.</span> At the same time, we respect kids' privacy.</br></br>During the competition, <a href="http://www.marianaemartinez.com" target="_blank">Mariana</a> and I did secondary research, analyzed bullying issues, and designed the solution within 24 hours.  In this project, we identified opportunities, came up with experience solutions, and some key interface.
 </p>
 
-<div id="personas">
+<div id="idea">
+<h2 class="parttitle">THE IDEA</h2>
+<p class="description">Bubble is a platform that prevents bullying between students by connecting students with supports on an app and thier student ID card. </p>
+<!-- <p class="note1">What is Bubble?</p> -->
+<table class="imgrid">
+  <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/idea1.png" alt="intel bubble" style="width:350px"></img></th>
+    <th class="grid4 annotate" ><img class="imgingrid" src="assets/img/idea2.svg" alt="intel bubble"></img></th>
+  </tr>
+ <!--  <tr>
+   <th class="grid4" ><img class="imgingrid" src="assets/img/idea3.png" alt="intel bubble" style="width:350px"></img></th>
+    <th class="grid4 annotate" ><img class="imgingrid" src="assets/img/idea4.svg" alt="intel bubble"></img></th> -->
+  </tr>
+</table>
+
+</div>
+
+
+<!-- <div id="personas">
 <h2 class="parttitle">Personas</h2>
 <img class="personas" src="assets/img/personas.png" alt="personas"></img>
 </div>
+ -->
 
-<div id="ecosystem">
-<h2 class="parttitle">Ecosystem Map</h2>
+<div id="research">
+<h2 class="parttitle">RESEARCH</h2>
+
 <img class="ecosystem" src="assets/img/ecosystem.png"></img>
-</div>
-
-<div id="journeymap">
-<h2 class="parttitle">Journey Map</h2>
+<p class="description mapdescription">In secondary research, we found that <span class="hilight">"64% of children are bullied and do not report it"</span> because they feel embarrassment, retaliation, and they deserve it. </br></br> We also found <span class="hilight">"more than half of bullying stops when peer intervention occurs on behalf of the student"</span> because they are supported, are acknowledged, they feel part of a community.</p>
+<!-- <h3 class="note1">Eco-system map</h3> -->
+<!-- <h2 class="parttitle">Journey Map</h2> -->
 <img class="journeymap" src="assets/img/journeymap.svg"></img>
+<!-- <h3 class="note1">Journey Map</h3> -->
 <!-- <h2 class="parttitle">App System</h2> -->
-<p class="description mapdescription">According to user jouney, we find opportunities in <span class="hilight">"before bullying"</span>, <span class="hilight">"during bullying"</span>, and <span class="hilight">"after bullying"</span>. <br><br>Therefore, we came up with 3 major use cases, <span class="hilight">Education</span>, <span class="hilight">Emergency</span>, and <span class="hilight">Protection</span>, to aim at problems of the 3 bully problems.</p>
+<p class="description mapdescription">According to user jouney, we find opportunities in <span class="hilight">"before bullying"</span>, <span class="hilight">"during bullying"</span>, and <span class="hilight">"after bullying"</span>. </br></br>Therefore, we came up with 3 major use cases, <span class="hilight">Education</span>, <span class="hilight">Emergency</span>, and <span class="hilight">Protection</span>, to aim at problems of the 3 bully problems.</p>
 <img class="journeymap" src="assets/img/appsystem.svg"></img>
 </div>
 
+<div id="ux">
+<h2 class="parttitle">THE EXPERIENCE</h2>
+<p class="description">Bubble is a platform that prevents bullying between students by connecting students with supports on an app and thier student ID card. </p>
+<!-- <p class="note1">What is Bubble?</p> -->
+<table class="imgrid">
+  <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/idea1.png" alt="intel bubble" style="width:350px"></img></th>
+    <th class="grid4 annotate" ><img class="imgingrid" src="assets/img/idea2.svg" alt="intel bubble"></img></th>
+  </tr>
+ <!--  <tr>
+   <th class="grid4" ><img class="imgingrid" src="assets/img/idea3.png" alt="intel bubble" style="width:350px"></img></th>
+    <th class="grid4 annotate" ><img class="imgingrid" src="assets/img/idea4.svg" alt="intel bubble"></img></th> -->
+  </tr>
+</table>
+
+</div>
 
 
 <div id="mybutt">
@@ -74,6 +108,7 @@
 </script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
 <script type ="text/javascript" src="js/javascript.js"></script>
 
 </body>
