--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 
 
 <div id="nav">
-     <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
+     <div class="title"><a href="http://zxue.me">ZHIYU <span>XUE</span></a></div>
       <a href="http://about.zxue.me"><div class="menu about">ABOUT<div class="underline"></div></div></a>
       <a href="http://work.zxue.me"><div class="menu work">WORK <div class="underline"></div></div></a>
   </div>
-<div id="navbackground"></div>
+  <div id="navbackground"></div>
+  <div id="navbackground2"></div>
 
 
 <!-- <div id="bubble">
