--- a/bubble/index.html
+++ b/bubble/index.html
@@ -18,11 +18,13 @@
   <body>
 
 <div id="nav">
-     <div class="title"><a href="http://zxue.me">ZHIYU XUE</a></div>
+     <div class="title"><a href="http://zxue.me">ZHIYU <span>XUE</span></a></div>
       <a href="http://about.zxue.me"><div class="menu about">ABOUT<div class="underline"></div></div></a>
       <a href="http://work.zxue.me"><div class="menu work">WORK <div class="underline"></div></div></a>
   </div>
-<div id="navbackground"></div>
+  <div id="navbackground"></div>
+  <div id="navbackground2"></div>
+
 
 <img class="headpic" src="assets/img/headpic.png" alt="Bubble | Intel Designovation 24 hours challenge."></img>
 
@@ -41,7 +43,7 @@
 <!-- <p class="note1">What is Bubble?</p> -->
 <table class="imgrid">
   <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/idea1.png" alt="intel bubble" style="width:350px"></img></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/idea1.png" alt="intel bubble"></img></th>
     <th class="grid4 annotate" ><img class="imgingrid" src="assets/img/idea2.svg" alt="intel bubble"></img></th>
   </tr>
  <!--  <tr>
@@ -75,16 +77,29 @@
 
 <div id="ux">
 <h2 class="parttitle">THE EXPERIENCE</h2>
-<p class="description">Bubble is a platform that prevents bullying between students by connecting students with supports on an app and thier student ID card. </p>
+<p class="description">The students' privacy is what we want to protect the most. In order to achieve this, we carefully keep students out of surveillance and give them space to communicate with their parents or teachers.</p>
 <!-- <p class="note1">What is Bubble?</p> -->
 <table class="imgrid">
   <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/idea1.png" alt="intel bubble" style="width:350px"></img></th>
-    <th class="grid4 annotate" ><img class="imgingrid" src="assets/img/idea2.svg" alt="intel bubble"></img></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/login.png" alt="intel bubble"></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">User Groups</span><br>At the Login screen, we separate students, teachers, and parents because the content specifically targets to different user groups. </p></th>
   </tr>
- <!--  <tr>
-   <th class="grid4" ><img class="imgingrid" src="assets/img/idea3.png" alt="intel bubble" style="width:350px"></img></th>
-    <th class="grid4 annotate" ><img class="imgingrid" src="assets/img/idea4.svg" alt="intel bubble"></img></th> -->
+  <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/foryou.png" alt="intel bubble" ></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">For You</span><br>What is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripe</p></th>
+  </tr>
+   <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/alert.png" alt="intel bubble"></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Alert</span><br>What is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripe</p></th>
+  </tr>
+   <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/card.png" alt="intel bubble" ></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">What card?</span><br>
+Not all students have access to a smartphone, but all students have an ID card. It also allows them to ring the alert without looking at the screen in an uncontrolled situation. Additionally, people can also find students if a natural disaster happens.</p></th>
+  </tr>
+  <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/report.png" alt="intel bubble" ></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">What card?</span><br>Not all students have access to a smart phone, but all students have an ID catd. It also allows them to ring the alert without looking at the phone in uncontrolled situation. Additionally, people can also find students if earthquake happens.</p></th>
   </tr>
 </table>
 
