--- a/bubble/index.html
+++ b/bubble/index.html
@@ -27,6 +27,7 @@
 
 
 <img class="headpic" src="assets/img/headpic.png" alt="Bubble | Intel Designovation 24 hours challenge."></img>
+<img class="headpicm" src="assets/img/headpicm.png" alt="Bubble | Intel Designovation 24 hours challenge."></img>
 
 
 <h1 class="protitle"><img class="logoimg" src="assets/img/logo.png"></img>  Bubble</h1>
