now! introducing my new work bubble!

--- a/bubble/index.html
+++ b/bubble/index.html
@@ -81,31 +81,94 @@
 <p class="description">The students' privacy is what we want to protect the most. In order to achieve this, we carefully keep students out of surveillance and give them space to communicate with their parents or teachers.</p>
 <!-- <p class="note1">What is Bubble?</p> -->
 <table class="imgrid">
-  <tr>
-    <th class="grid4" ><img class="imgingrid" src="assets/img/login.png" alt="intel bubble"></img></th>
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">User Groups</span><br>At the Login screen, we separate students, teachers, and parents because the content specifically targets to different user groups. </p></th>
-  </tr>
+
   <tr>
     <th class="grid4" ><img class="imgingrid" src="assets/img/foryou.png" alt="intel bubble" ></img></th>
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">For You</span><br>What is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripe</p></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">For You</span><br>When different users log in, they can read different quotes or articles like "How One Can Stop Bullying"," "How to Protect Yourself," and "How to Protect Your Child" all dependant on who the user is. We want to offer knowledge to empower students, bullies, and parents.</p></th>
   </tr>
-   <tr>
+
+   <tr class="mobileview">
     <th class="grid4" ><img class="imgingrid" src="assets/img/alert.png" alt="intel bubble"></img></th>
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Alert</span><br>What is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripeWhat is de descripe</p></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Alert</span><br>When an emergency happens, students can ring an alert on their phone or their student ID cards. Teachers or supporters will be able to locate the students by tracking the Bluetooth strength on their ID cards and GPS to come to help students even when they are in the different floor.</p></th>
   </tr>
+
+   <tr class="fullview">
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Alert</span><br>When an emergency happens, students can ring an alert on their phone or their student ID cards. Teachers or supporters will be able to locate the students by tracking the Bluetooth strength on their ID cards and GPS to come to help students even when they are in the different floor.</p></th>
+        <th class="grid4" ><img class="imgingrid" src="assets/img/alert.png" alt="intel bubble"></img></th>
+  </tr>
+
    <tr>
     <th class="grid4" ><img class="imgingrid" src="assets/img/card.png" alt="intel bubble" ></img></th>
-    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">What card?</span><br>
-Not all students have access to a smartphone, but all students have an ID card. It also allows them to ring the alert without looking at the screen in an uncontrolled situation. Additionally, people can also find students if a natural disaster happens.</p></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Why card?</span><br>
+Not all students have access to a smartphone, but all students have an ID card. It also allows them to ring the alert without looking at the screen in an uncontrolled situation. Additionally, people can also find students easier if a natural disaster happens.</p></th>
   </tr>
+
+  <tr class="fullview">
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Anonymous Report</span><br>We find that most students don't report to teachers because they don't know what happened after they report. Therefore, we designed a system loop that will update the investigate progress to students. In order to encourage students to report, we should keep their faith first.</p></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/reportshort.png" alt="intel bubble"></img></th>
+  </tr>
+
+   <tr class="mobileview">
+    <th class="grid4" ><img class="imgingrid" src="assets/img/reportshort.png" alt="intel bubble"></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">Anonymous Report</span><br>We find that most students don't report to teachers because they don't know what happened after they report. Therefore, we designed a system loop that will update the investigate progress to students. In order to encourage students to report, we should keep their faith first.</p></th>
+  </tr>
+
+ <tr>
+
+    <th><img class="journeymap" src="assets/img/reportloop.svg"></img></th>
+    <!-- <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">User Groups</span><br>At the Login screen, we separate students, teachers, and parents because the content specifically targets to different user groups. </p></th> -->
+  </tr>
+
+<!-- 
+  <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/login.png" alt="intel bubble"></img></th>
+    <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">User Groups</span><br>We find that most students don't report to teachers because they don't know what happened after they report. Therefore, we designed a system loop that will update the investigate progress to students. In order to encourage students to report, we should keep their faith first.
+</p></th>
+  </tr>
+  
+  
   <tr>
     <th class="grid4" ><img class="imgingrid" src="assets/img/report.png" alt="intel bubble" ></img></th>
     <th class="grid4 annotate" ><p class="description mapdescription"><span class="hilight">What card?</span><br>Not all students have access to a smart phone, but all students have an ID catd. It also allows them to ring the alert without looking at the phone in uncontrolled situation. Additionally, people can also find students if earthquake happens.</p></th>
-  </tr>
+  </tr> -->
 </table>
-
 </div>
 
+<div id="ui">
+<h2 class="parttitle">UI GALLERY</h2>
+<!-- <p class="description">The students' privacy is what we want to protect the most. In order to achieve this, we carefully keep students out of surveillance and give them space to communicate with their parents or teachers.</p> -->
+<!-- <p class="note1">What is Bubble?</p> -->
+<table class="imgrid">
+
+  <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/login.png" alt="intel bubble" ></img></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/splashscreen.png" alt="intel bubble" ></img></th>
+  </tr>
+
+   <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/parents.png" alt="intel bubble" ></img></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/support.png" alt="intel bubble" ></img></th>
+  </tr>
+
+   <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/forparents.png" alt="intel bubble" ></img></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/kidedu.png" alt="intel bubble" ></img></th>
+  </tr>
+
+     <tr>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/reportshort.png" alt="intel bubble" ></img></th>
+    <th class="grid4" ><img class="imgingrid" src="assets/img/reportreply.png" alt="intel bubble" ></img></th>
+  </tr>
+
+</table>
+</div>
+
+<div id="appendix">
+<h2 class="parttitle">APPENDIX</h2>
+<p class="description mapdescription">Research information is from: <span class="hilight">Petrosina, Guckenberg, DeVoe + Hanson, 2010 <br /> Hawkins, Pepler + Craig, 2013</span><br />Photos are from <span class="hilight">internet</span><br /><br /><br /></p>
+<!-- <p class="note1">What is Bubble?</p> -->
+
+</div>
 
 <div id="mybutt">
   <div class="mycopyright"><a href="http://resume.zxue.me"><span class="myrightfont"><span class="mycopyrightc">&#9426;  &nbsp</span> 2016 ZHIYU XUE</span></a></div><div class="mycontact"><a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><span class="myrightfont">CONTACT ME</span></a></div>
