--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
   <div id="navbackground2"></div>
 
 
-<!-- <div id="bubble">
+<div id="bubble">
   <div id="bubbleinfo"><h1><img class="bubblelogo" src="assets/img/bubblelogo.png"/><br>Bubble</h1><h2>Let's put an end to bullying.</h2><h4><span>Intel Designovation: 24 hour design challenge.</span></h4>
     <h3><a href="bubble/index.html">Open Project</a> ></h3></div>
   <img id="bubbleimg" src="assets/img/bubble2.1.png" /><img id="bubbleimgmobile" src="assets/img/bubble2.1mobile.png" />
-  </div> -->
+  </div>
 
 <div id="mixx24">
   <div id="mixxinfo"><h1><img class="mixxlogo" src="assets/img/mixxlogo.png"/></h1><h2>From ground to the heavens;<br /> your music, anywhere.</h2>
