open in the new tab

--- a/index.html
+++ b/index.html
@@ -29,33 +29,33 @@
 
 <div id="bubble">
   <div id="bubbleinfo"><h1><img class="bubblelogo" src="assets/img/bubblelogo.png"/><br>Bubble</h1><h2>Let's put an end to bullying.</h2><h4><span>Intel Designovation: 24 hour design challenge.</span></h4>
-    <h3><a href="bubble/index.html">Open Project</a> ></h3></div>
+    <h3><a href="bubble/index.html" target="_blank">Open Project</a> ></h3></div>
   <img id="bubbleimg" src="assets/img/bubble2.1.png" /><img id="bubbleimgmobile" src="assets/img/bubble2.1mobile.png" />
   </div>
 
 <div id="mixx24">
   <div id="mixxinfo"><h1><img class="mixxlogo" src="assets/img/mixxlogo.png"/></h1><h2>From ground to the heavens;<br /> your music, anywhere.</h2>
-    <h3><a href="mixx/index.html">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> > --></h3></div>
+    <h3><a href="mixx/index.html" target="_blank">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> > --></h3></div>
   <img id="mixximg" src="assets/img/mixx2.1.png" />
   </div>
 
 
 <div id="companionship">
   <div id="companionshipinfo"><h1>Companionship</h1><h2>An interactive story to help develop closure after a breakup.</h2>
-    <h3><a href="companionship/index.html">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> > --></h3></div>
+    <h3><a href="companionship/index.html" target="_blank">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> > --></h3></div>
   <img id="companionshipimg" src="assets/img/companionship2.1.png" /><img id="companionshipimgmobile" src="assets/img/companionship2.1mobile.png" />
   </div>
 
 <div id="wetea">
   <div id="weteainfo"><h1>weTea Game</h1><h2>What if tea bags could help break the ice of a conversation?
 </h2>
-    <h3><a href="yogitea/index.html">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
+    <h3><a href="yogitea/index.html" target="_blank">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
   <img id="weteaimg" src="assets/img/yogi2.1.png" /><img id="weteaimgmobile" src="assets/img/yogi2.1mobile.png" />
   </div>
 
 <div id="monsterpho">
   <div id="monsterphoinfo"><h1>Monster Pho</h1><h2>Performing deep, honest research to discover how a pho restaurant can be innovative.</h2>
-    <h3><a href="monsterpho/index.html">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
+    <h3><a href="monsterpho/index.html" target="_blank">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
   <img id="monsterphoimg" src="assets/img/monsterpho2.1.svg" /><img id="monsterphoimgmobile" src="assets/img/monsterpho2.1.png" />
   </div>
 
@@ -70,7 +70,7 @@
 
   <div id="unown">
   <div id="unowninfo"><h1>Unown Sans</h1><h2>HTML + CSS = Unown Sans Font</h2>
-    <h3><a href="http://zxue.me/interactive2/project3/index.html">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
+    <h3><a href="http://zxue.me/interactive2/project3/index.html" target="_blank">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
   <img id="unownimg" src="assets/img/unown2.1.png" /><img id="unownimgmobile" src="assets/img/unown2.1mobile.png" />
   </div>
 
