--- a/companionship/index.html
+++ b/companionship/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Companionship - Zhiyu Xue</title>
+    <title>Friendship - Zhiyu Xue</title>
     <meta name="author" content="Zhiyu (Reaji) Xue" />
     <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -33,7 +33,7 @@
   
 <div id="content">
 
-  <h1 class="protitle">Companionship</h1>
+  <h1 class="protitle">Friendship</h1>
   <h4 class="prosubtitle">An interactive story-telling game on <a class="whatis">Sifteo Cubes.</a></h4>
   <h6 class="procredit">Project Advisor: <a href="http://eleganthack.com" style="font-weight:500; text-decoration:underline">Christina Wodtke</a></h6>
 
@@ -50,14 +50,14 @@
 
 
 <div id="readmore">
-  <h6 class="prodescribe">“Companionship” is an interactive story project. The assignment asked students to find a scarce resource and develop a story to encourage readers to share the resource; the resource chosen by me was Companionship. With the help of the Sifteo cubes, readers could engage in this Companionship with 5 Non-player characters - the action of combining cubes enabled players to better engage with the story.</h6>
+  <h6 class="prodescribe">“Friendship” is an interactive story project. The assignment asked students to find a scarce resource and develop a story to encourage readers to share the resource; the resource chosen by me was Companionship. With the help of the Sifteo cubes, readers could engage in this Friendship with 5 Non-player characters - the action of combining cubes enabled players to better engage with the story.</h6>
   
 
   <img class="showcase"src="assets/img/img1.png" />
   <p class="imgnote">img of rendered finalized design</p>
 
-  <h2 class="protitle1">Why companionship?</h2>
-  <h6 class="prodescribe1">I chose the topic of companionship because I had found feeling low and I needed help to get out of it. So, I interviewed 3 friends of different ages and cultural backgrounds. I asked them to tell me a story of being helpless and upset and sketched notes. Interestingly, I found a pattern; that all of them got rid of their sorrow by talking to others. Both sharing their stories and listening others' stories helped them move on. I found myself greatly enjoying my topic choice, because it also helped me out.</h6>
+  <h2 class="protitle1">Why Friendship?</h2>
+  <h6 class="prodescribe1">I chose the topic of Friendship because I had found feeling low and I needed help to get out of it. So, I interviewed 3 friends of different ages and cultural backgrounds. I asked them to tell me a story of being helpless and upset and sketched notes. Interestingly, I found a pattern; that all of them got rid of their sorrow by talking to others. Both sharing their stories and listening others' stories helped them move on. I found myself greatly enjoying my topic choice, because it also helped me out.</h6>
    <img class="showcase"src="assets/img/process.png" />
    <p class="imgnote">Interview Sketch Note</p>
    <h4 class="quotation">"I want to be able to be myself, to open my heart. I want to be emotional avaliable to what to love and feel."<br/>-Jose (Interviewee)</h4>
