--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 <div id="companionship">
-  <div id="companionshipinfo"><h1>Companionship</h1><h2>An interactive story to help develop closure after a breakup.</h2>
+  <div id="companionshipinfo"><h1>Friendship</h1><h2>An interactive story to help develop closure after a breakup.</h2>
     <h3><a href="companionship/index.html" target="_blank">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> > --></h3></div>
   <img id="companionshipimg" src="assets/img/companionship2.1.png" /><img id="companionshipimgmobile" src="assets/img/companionship2.1mobile.png" />
   </div>
