--- a/index.html
+++ b/index.html
@@ -28,56 +28,56 @@
 
 
 <div id="bubble">
-  <div id="bubbleinfo"><h1><img class="bubblelogo" src="assets/img/bubblelogo.png"/><br>Bubble</h1><h2>Let's put an end to bullying.</h2><h4><span>Intel Designovation: 24 hour design challenge.</span></h4>
-    <h3><a href="bubble/index.html" target="_blank">Open Project</a> ></h3></div>
-  <img id="bubbleimg" src="assets/img/bubble2.1.png" /><img id="bubbleimgmobile" src="assets/img/bubble2.1mobile.png" />
+ <div id="bubbleinfo"><h1><img class="bubblelogo" src="assets/img/bubblelogo.png"/><br>Bubble</h1><h2>Let's put an end to bullying.</h2><h4><span>Intel Designovation: 24 hour design challenge.</span></h4>
+    <h3><a href="bubble/index.html" >Open Project</a> ></h3></div>
+  <a href="bubble/index.html" ><img id="bubbleimg" src="assets/img/bubble2.1.png" /><img id="bubbleimgmobile" src="assets/img/bubble2.1mobile.png" /></a>
   </div>
 
 <div id="mixx24">
   <div id="mixxinfo"><h1><img class="mixxlogo" src="assets/img/mixxlogo.png"/></h1><h2>From ground to the heavens;<br /> your music, anywhere.</h2>
-    <h3><a href="mixx/index.html" target="_blank">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> > --></h3></div>
-  <img id="mixximg" src="assets/img/mixx2.1.png" />
+    <h3><a href="mixx/index.html" >Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> > --></h3></div>
+  <a href="mixx/index.html" ><img id="mixximg" src="assets/img/mixx2.1.png" /></a>
   </div>
 
 
 <div id="companionship">
   <div id="companionshipinfo"><h1>Friendship</h1><h2>An interactive story to help develop closure after a breakup.</h2>
-    <h3><a href="companionship/index.html" target="_blank">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> > --></h3></div>
-  <img id="companionshipimg" src="assets/img/companionship2.1.png" /><img id="companionshipimgmobile" src="assets/img/companionship2.1mobile.png" />
+    <h3><a href="companionship/index.html" >Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact Me</a> > --></h3></div>
+  <a href="companionship/index.html" ><img id="companionshipimg" src="assets/img/companionship2.1.png" /><img id="companionshipimgmobile" src="assets/img/companionship2.1mobile.png" /></a>
   </div>
 
 <div id="wetea">
   <div id="weteainfo"><h1>weTea Game</h1><h2>What if tea bags could help break the ice of a conversation?
 </h2>
-    <h3><a href="yogitea/index.html" target="_blank">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
-  <img id="weteaimg" src="assets/img/yogi2.1.png" /><img id="weteaimgmobile" src="assets/img/yogi2.1mobile.png" />
+    <h3><a href="yogitea/index.html" >Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
+  <a href="yogitea/index.html" ><img id="weteaimg" src="assets/img/yogi2.1.png" /><img id="weteaimgmobile" src="assets/img/yogi2.1mobile.png" /></a>
   </div>
 
 <div id="monsterpho">
   <div id="monsterphoinfo"><h1>Monster Pho</h1><h2>Performing deep, honest research to discover how a pho restaurant can be innovative.</h2>
-    <h3><a href="monsterpho/index.html" target="_blank">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
-  <img id="monsterphoimg" src="assets/img/monsterpho2.1.svg" /><img id="monsterphoimgmobile" src="assets/img/monsterpho2.1.png" />
+    <h3><a href="monsterpho/index.html" >Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
+  <a href="monsterpho/index.html" ><img id="monsterphoimg" src="assets/img/monsterpho2.1.svg" /><img id="monsterphoimgmobile" src="assets/img/monsterpho2.1.png" /></a>
   </div>
 
 
   <div id="facebookarchive">
   <div id="facebookarchiveinfo"><h1>Facebook Archive</h1><h2>Redesigning Facebook with the micro interactions of a calendar.</h2>
     <h3><a class="video" >Watch Video</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
-  <img id="facebookarchiveimg" src="assets/img/facebookarchive2.1.png" /><img id="facebookarchiveimgmobile" src="assets/img/companionship2.1mobile.png" />
+  <a class="video" ><img id="facebookarchiveimg" src="assets/img/facebookarchive2.1.png" /><img id="facebookarchiveimgmobile" src="assets/img/companionship2.1mobile.png" /></a>
   </div>
   <div id="facebookarchivevideo"><h1 class="turnoff">&times;</h1><style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 90%; margin: 0 auto;} .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 90%; }</style><div class='embed-container'><iframe  src="https://player.vimeo.com/video/158299517?title=0&byline=0&portrait=0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div></div>
 
 
   <div id="unown">
   <div id="unowninfo"><h1>Unown Sans</h1><h2>HTML + CSS = Unown Sans Font</h2>
-    <h3><a href="http://zxue.me/interactive2/project3/index.html" target="_blank">Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
-  <img id="unownimg" src="assets/img/unown2.1.png" /><img id="unownimgmobile" src="assets/img/unown2.1mobile.png" />
+    <h3><a href="http://zxue.me/interactive2/project3/index.html" >Open Project</a> ><!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A">Contact me</a> > --></h3></div>
+  <a href="http://zxue.me/interactive2/project3/index.html" ><img id="unownimg" src="assets/img/unown2.1.png" /><img id="unownimgmobile" src="assets/img/unown2.1mobile.png" /></a>
   </div>
 
 <div id="mybutt">
-  <div class="mycopyright"><a href="http://resume.zxue.me" target="_blank"><span class="myrightfont"><span class="mycopyrightc">&#9426;  &nbsp</span> 2016 ZHIYU XUE</span></a></div><div class="mycontact"><a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><span class="myrightfont">CONTACT ME</span></a></div>
+  <div class="mycopyright"><a href="http://resume.zxue.me" ><span class="myrightfont"><span class="mycopyrightc">&#9426;  &nbsp</span> 2016 ZHIYU XUE</span></a></div><div class="mycontact"><a href="mailto:ixd@zxue.me?&subject=Hi Zhiyu&body=Hi%20there,%0AI%20am%20from%20your%20portfolio%20website.%0A"><span class="myrightfont">CONTACT ME</span></a></div>
 
- <a href="https://medium.com/@reajixue" target="_blank"><div class="mysharebuttom1">M</div></a> <a href="https://twitter.com/reajixue" target="_blank"><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue" target="_blank"><div class="mysharebuttom3">in</div></a>
+ <a href="https://medium.com/@reajixue" ><div class="mysharebuttom1">M</div></a> <a href="https://twitter.com/reajixue" ><div class="mysharebuttom2">t</div></a> <a href="http://www.linkedin.com/in/zhiyuxue" ><div class="mysharebuttom3">in</div></a>
 </div>
 
 <script>
